--- a/index.ipynb
+++ b/index.ipynb
@@ -54,11 +54,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "[[1 2 3]\n",
+      " [4 5 6]]\n",
+      "\n",
+      "Hadamard Product\n",
+      "\n",
+      " [[ 1  4  9]\n",
+      " [16 25 36]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here"
+    "# Element-wise Hadamard Product\n",
+    "import numpy as np\n",
+    "A = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(A)\n",
+    "B = np.array([[1, 2, 3], [4, 5, 6]])\n",
+    "print(B)\n",
+    "print ('\\nHadamard Product\\n\\n', A * B)"
    ]
   },
   {
@@ -286,9 +308,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python [conda env:learn-env] *",
    "language": "python",
-   "name": "python3"
+   "name": "conda-env-learn-env-py"
   },
   "language_info": {
    "codemirror_mode": {
@@ -300,7 +322,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
