--- a/index.ipynb
+++ b/index.ipynb
@@ -183,11 +183,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[ 1  2  3]\n",
+      " [ 4  5  6]\n",
+      " [ 7  8  9]\n",
+      " [10 11 12]] \n",
+      "dot \n",
+      " [[2 7]\n",
+      " [1 2]\n",
+      " [3 6]] \n",
+      "=\n",
+      " [[ 13  29]\n",
+      " [ 31  74]\n",
+      " [ 49 119]\n",
+      " [ 67 164]]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# matrix dot product\n",
+    "A = np.array([[1, 2, 3], [4, 5, 6], [7, 8, 9], [10, 11, 12]])\n",
+    "B = np.array([[2, 7], [1, 2], [3, 6]])\n",
+    "\n",
+    "C = A.dot(B)\n",
+    "\n",
+    "print(A, '\\ndot\\n', B, '\\n=\\n', C)"
    ]
   },
   {
@@ -239,11 +265,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]\n",
+      " [5 6]] \n",
+      "dot\n",
+      " [0.5 0.5] \n",
+      "= [1.5 3.5 5.5]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# matrix-vector multiplication\n",
+    "A = np.array([[1, 2], [3, 4], [5, 6]])\n",
+    "v = np.array([0.5, 0.5])\n",
+    "C = A.dot(v)\n",
+    "print(A,'\\ndot\\n',v,'\\n=',C)"
    ]
   },
   {
@@ -287,11 +330,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[-1  0  0]\n",
+      "[1 0 0]\n"
+     ]
+    }
+   ],
    "source": [
-    "# Code here "
+    "# Cross product between two vectors\n",
+    "x = np.array([0,0,1])\n",
+    "y = np.array([0,1,0])\n",
+    "\n",
+    "print(np.cross(x,y))\n",
+    "print(np.cross(y,x))"
    ]
   },
   {
